appId: com.optioeducation.optio
name: "Helper: Login as Student"
tags:
  - helper
  - auth
---
- launchApp
- assertVisible:
    text: "Welcome Back"
    timeout: 10000
- tapOn:
    text: "you@email.com"
- inputText: ${TEST_STUDENT_EMAIL}
- tapOn:
    text: "Enter password"
- inputText: ${TEST_STUDENT_PASSWORD}
- tapOn:
    text: "Sign In"
- assertVisible:
    text: "Feed"
    timeout: 10000
